--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_core: ^1.20.0
   get_storage: ^2.0.3
   material_color_generator: ^1.1.0
+  feather_icons: ^1.2.0
+  simple_animations: ^4.2.0
 
 dev_dependencies:
   flutter_test:
